# slag

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  install.sh  slag.sh
.github/workflows/: ci.yml  release.yml
example/: AGENTS.md  BLUEPRINT.md  PLAN.md  PRD.md  PROGRESS.md  README.md
src/: cli.rs  config.rs  crucible.rs  error.rs  flux.rs  main.rs  progress.rs  proof.rs  tui.rs  update.rs
src/anvil/: mod.rs  worktree.rs
src/pipeline/: analysis.rs  assay.rs  forge.rs  founder.rs  mod.rs  resmelt.rs  review.rs  surveyor.rs
src/sexp/: mod.rs  parser.rs  writer.rs
src/smith/: claude.rs  mock.rs  mod.rs
tests/: test_slag.sh
website/: index.html  package-lock.json  package.json  wrangler.toml
website/public/: install.sh  llms-full.txt  llms.txt  slag.md  slag.sh
website/src/: content.js  main.css  main.js
